fix: visible icons on site

--- a/style/styleMenu.css
+++ b/style/styleMenu.css
@@ -163,7 +163,7 @@ body {
 /* Enjoy block */
 
 .enjoy-main-background {
-    background: url(assets/bgc__hero.jpg), lightgray 50% / cover no-repeat;
+    background: url(../assets/bgphoto.jpg), lightgray 50% / cover no-repeat;
     margin-bottom: 100px;
     background-position: 100%;
     height: 640px;
@@ -218,7 +218,7 @@ body {
     overflow: hidden;
 }
 .menu-button-main::before {
-    content: url(assets/coffee-cup.svg);
+    content: url(../assets/coffee-cup.svg);
     position: absolute;
     top: 50%;
     right: 45%;
